fixes #8469 - css cleanup, whitespaces and remove dead code

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -6,7 +6,7 @@ $navbar-default-bg: $primary_color;
 @import "bootstrap";
 
 .dropdown-menu {
-  @include border_radius(0, 0, 6px, 6px);
+  border-radius: 0 0 6px 6px;
 }
 
 // Necessary because bootstrap3 nav dropdown does not have top arrow
